--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ python:
   - "2.7"
   - "3.5.1"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: 
+  - pip install -r requirements.txt --use-mirrors
+  - pip install -r dev-requirements.txt --use-mirrors
 # command to run tests
-script: nosetests
+script:
+  - nosetests --with-coverage
+after_success:
+  coveralls --verbose
