--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.5.1"
 # command to install dependencies
 install: 
-  - pip install -r requirements.txt --use-mirrors
-  - pip install -r dev-requirements.txt --use-mirrors
+  - pip install -r requirements.txt
+  - pip install -r dev-requirements.txt
 # command to run tests
 script:
   - nosetests --with-coverage
